--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "cors": "^2.8.5",
     "csrf-csrf": "^4.0.3",
     "dotenv": "^16.4.7",
-    "evilscan": "^1.9.1",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "express-session": "^1.18.1",
@@ -36,6 +35,7 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.1",
     "pdfkit": "^0.16.0",
+    "playwright": "^1.58.2",
     "uuid": "^11.0.5",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
