feat(auth): allow configuring secure cookies via COOKIE_SECURE
- Introduced `COOKIE_SECURE` environment variable to control `Secure` cookie attribute.
- Updated `config/security.js` to export `isCookieSecure` logic.
- Updated `app.js` and `middleware/auth.js` to use `isCookieSecure` for session and CSRF cookies.
- Documented `COOKIE_SECURE` in `README.md` and `.env.example`.

This fixes login issues when running the application in production mode over HTTP (e.g. self-hosted local network).

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@ SESSION_SECRET=your_random_session_secret_here
 DATABASE_PATH=./database/securescope.db
 LOG_LEVEL=info
 NODE_ENV=production
+# Set to false if running in production over HTTP (e.g. local network)
+# COOKIE_SECURE=true
 
 # CSRF Token Secret
 CSRF_SECRET=your_random_csrf_secret_here
