--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,10 @@ NODE_ENV=production
 # CSRF Token Secret
 CSRF_SECRET=your_random_csrf_secret_here
 
+# Credential Encryption
+# CREDENTIAL_SECRET=your_random_credential_secret_here
+# CREDENTIAL_SALT=your_random_credential_salt_here
+
 # Scan Configuration
 SCAN_TIMEOUT=900000
 MAX_CONCURRENT_SCANS=3
