--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "express-session": "^1.18.1",
+    "fast-xml-parser": "^5.3.7",
     "helmet": "^8.0.0",
     "ip-cidr": "^4.0.2",
     "json2csv": "^5.0.7",
